--- a/index.html
+++ b/index.html
@@ -2,17 +2,25 @@
 <html>
 
 <head>
-    <title>Chat with AI</title>
+    <title>Chat With AI</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link href="resources/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script src="resources/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="resources/marked.min.js" crossorigin="anonymous"></script>
-    <script src="resources/purify.min.js" crossorigin="anonymous"></script>
+    <link href="resources/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="resources/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <script src="resources/marked.min.js"
+        integrity="sha384-dZulhREgb+hCgQMhZ2VG0l37VQj5pJBq2w0h7Jn3tdMn36aXNepF1+FMLBB4O649"
+        crossorigin="anonymous"></script>
+    <script src="resources/purify.min.js" integrity="sha256-QigBQMy2be3IqJD2ezKJUJ5gycSmyYlRHj2VGBuITpU="
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="chat.css">
+  
+    
 </head>
 
-<body data-bs-theme="dark">
 
+<body data-bs-theme="dark">
 
     <div class="main">
 
@@ -22,7 +30,6 @@
             <a href="./index.html">Ollama</a>
             <a href="./model.html">Model</a>
             <a href="./setting.html">Setting</a>
-
             <hr>
             <!-- ------------- -->
 
@@ -35,15 +42,15 @@
 
         </div>
 
-
         <div id="main" class="container">
             <div class="row pt-3">
                 <div class="col-md-8 col-12">
-                    <button id="hide" class="openbtn" onclick="openNav()">☰</button>
+                    <button class="openbtn" onclick="openNav()">☰</button>
 
                     <a href="./index.html"> <img src="favicon.ico" style="width: 10%;" alt="ollama">
                     </a>
                 </div>
+
                 <div id="model-controls" class="col-md-4 col-12 text-md-end text-start mb-3">
                     <div class="d-flex flex-column align-items-md-end align-items-start">
                         <div class="d-flex align-items-center mb-2">
@@ -69,7 +76,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="container p-2 card" id="input-area">
                 <div class="input-group">
@@ -113,12 +119,11 @@
                 </div>
             </div>
 
+
         </div>
     </div>
-
-    <script src="api.js"></script>
-    <script src="chat.js"></script>
-
 </body>
+<script src="api.js"></script>
+<script src="chat.js"></script>
 
 </html>
