--- a/model.html
+++ b/model.html
@@ -179,7 +179,9 @@
 
 <script src="api.js"></script>
 <script src="chat.js"></script>
-
+<script>
+    window.onload = loadBackgroundColor;
+</script>
 </body>
 
 </html>
