--- a/setting.html
+++ b/setting.html
@@ -49,14 +49,15 @@
             <br><br>
 
             <div class="container">        
-                <!-- Background Color Selection Buttons -->
-                <h5>Choose Background Color:</h5>
-                <button class="btn btn-light" onclick="changeBackground('white')">White</button>
-                <button class="btn btn-dark text-light" onclick="changeBackground('black')">Black</button>
-                <button class="btn btn-info" onclick="changeBackground('skyblue')">Skyblue</button>
-                <button class="btn btn-danger" onclick="changeBackground('pink')">Pink</button>
-                <button class="btn btn-success" onclick="changeBackground('green')">Green</button>
-
+                    <h5>Choose Background Color:</h5>
+                    <button class="btn btn-light" onclick="changeBackground('white')">White</button>
+                    <button class="btn btn-secondary" onclick="changeBackground('grey')">Grey</button>
+                    <button class="btn btn-dark text-light" onclick="changeBackground('#333')">Dark Grey</button> <!-- Dark Grey Button -->
+                    <button class="btn btn-dark text-light" onclick="changeBackground('black')">Black</button> <!-- Black Button -->
+                    <button class="btn btn-info" onclick="changeBackground('skyblue')">Skyblue</button>
+                    <button class="btn btn-danger" onclick="changeBackground('pink')">Pink</button>
+                    <button class="btn btn-success" onclick="changeBackground('green')">Green</button>
+                
             </div>
 
         </center>
