readme and about

--- a/setting.html
+++ b/setting.html
@@ -60,6 +60,25 @@
                 
             </div>
 
+            <br><br>
+            <br><br>
+            <hr>
+
+            <h2>About</h2>
+            <p>Web UI is a user-friendly, Open source 
+                web-based interface for interacting with Ollama,
+                a tool for managing AI models and chat interactions. 
+                It is designed to resemble popular chat interfaces like ChatGPT,
+                offering features such as model switching, chat history management , installing Ollama models.
+                <ol  style="text-align: left;">
+                    <li>Ollama supports a wide variety of models—more than 120—available for download and usage.</li>
+                    <li>user-friendly</li>
+                    <li>Open source </li>
+                    <li>Beautiful UI</li>
+                </ol>
+            </p>
+
+
         </center>
 
 
