--- a/setting.html
+++ b/setting.html
@@ -86,6 +86,7 @@
                     <li>user-friendly</li>
                     <li>Open source </li>
                     <li>Beautiful UI</li>
+                    <li>Offline USE afer downloading Model</li>
                 </ol>
                 <h2>Todo</h2>
                 <ol style="text-align: left;">
