--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="nameModalLabel">Enter Your Name</h5>
+                            <h5 class="modal-title" id="nameModalLabel">Enter name to save</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
