--- a/setting.html
+++ b/setting.html
@@ -102,6 +102,11 @@
 
             </center>
 
+            <h1>Example</h1>
+            <video controls width="700">
+                <source src="AI.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
 
         </div>
     </div>
