able to update model list from web

--- a/setting.html
+++ b/setting.html
@@ -54,7 +54,7 @@
                     <button class="btn btn-secondary" onclick="changeBackground('grey')">Grey</button>
                     <button class="btn btn-dark text-light" onclick="changeBackground('#333')">Dark Grey</button>
                     <!-- Dark Grey Button -->
-                    <button class="btn btn-dark text-light" onclick="changeBackground('black')">Black</button>
+                    <button class="btn btn-dark text-light" onclick="changeBackground('#101011')">Black</button>
                     <!-- Black Button -->
                     <button class="btn btn-info" onclick="changeBackground('skyblue')">Skyblue</button>
                     <button class="btn btn-danger" onclick="changeBackground('pink')">Pink</button>
