--- a/model.html
+++ b/model.html
@@ -61,17 +61,24 @@
             <br><br>
             <br><br>
 
-            <h1>Models</h1>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <h1>Models</h1>
+                <button id="update_model_list">Update Models Lists</button>
+
+                <script>
+                     update_model_list.onclick = () => {
+                        displayDownloadMessage("Updating...");
+                        executeCommand(`python updatemodels.py`);
+                    };
+                </script>
+            </div>
+            <hr>
+
             <div id="download-message" class="mb-3"></div>
             <div class="row row-cols-1 row-cols-md-3 g-4" id="model-list">
 
-
-
             </div>
-
         </div>
-
-
     </div>
 
     <!-- model names and download -->
@@ -177,11 +184,11 @@
 
 
 
-<script src="api.js"></script>
-<script src="chat.js"></script>
-<script>
-    window.onload = loadBackgroundColor;
-</script>
+    <script src="api.js"></script>
+    <script src="chat.js"></script>
+    <script>
+        window.onload = loadBackgroundColor;
+    </script>
 </body>
 
 </html>
