sort by popular

--- a/model.html
+++ b/model.html
@@ -55,19 +55,21 @@
             </div>
 
             <center>
-                <h2 id="tooltip" class="ms-2" data-bs-toggle="tooltip" 
-                title="You can also download models LLM from https://ollama.com/library  🤩😄" >
-                Download Ollama Models 
-            </h2>
+                <h2 id="tooltip" class="ms-2" data-bs-toggle="tooltip"
+                    title="You can also download models LLM from https://ollama.com/library  🤩😄">
+                    Download Ollama Models
+                </h2>
             </center>
 
             <br><br>
             <br><br>
 
             <div style="display: flex; justify-content: space-between; align-items: center;">
-                <h1 id="tooltip" class="ms-2" data-bs-toggle="tooltip" 
-                title="You can also download models LLM from https://ollama.com/library  🤩😄">Models</h1>
-                <button id="update_model_list">Update Models Lists</button>
+                <h1 id="tooltip" class="ms-2" data-bs-toggle="tooltip"
+                    title="You can also download models LLM from https://ollama.com/library  🤩😄">Models</h1>
+                Sort By
+                <button id="popular_model_list">popular</button>
+                <button id="newer_model_list">Newer</button>
 
             </div>
             <hr>
@@ -179,24 +181,38 @@
 
     <!-- ------- -----  -->
 
+
     <!--  -->
+
+
     <script>
-        update_model_list.onclick = () => {
-        //    displayDownloadMessage("Updating...");
-           executeCommand(`python scripts/updatemodels.py`);
-           location.reload();
+        popular_model_list.onclick = () => {
+            //    displayDownloadMessage("Updating...");
+            executeCommand(`python scripts/popular.py`);
+            location.reload();
 
-       };
-   </script>
+        };
+
+    </script>
+
+    <script>
+
+        newer_model_list.onclick = () => {
+            //    displayDownloadMessage("Updating...");
+            executeCommand(`python scripts/updatemodels.py`);
+            location.reload();
+
+        };
+    </script>
 
 
-<script>
-    // Initialize Bootstrap tooltip
-    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-        return new bootstrap.Tooltip(tooltipTriggerEl);
-    });
-</script>
+    <script>
+        // Initialize Bootstrap tooltip
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl);
+        });
+    </script>
 
 
     <script src="api.js"></script>
