--- a/model.html
+++ b/model.html
@@ -81,6 +81,7 @@
         </div>
     </div>
 
+    <!-- model names and download -->
     <script>
         // Function to fetch JSON data and display it
         async function fetchModels() {
