--- a/setting.html
+++ b/setting.html
@@ -102,10 +102,12 @@
 
             </center>
 
+            <h1>Demo Site </h1>
+            <a href="https://samirgaire10.github.io/AI/">Demo Site</a>
+
             <h1>Example</h1>
             <video controls width="700">
-                <source src="AI.mp4" type="video/mp4">
-                Your browser does not support the video tag.
+                <source src="./scripts/AI.mp4" type="video/mp4">
             </video>
 
         </div>
