open in new cmd when exuxute commands

--- a/model.html
+++ b/model.html
@@ -68,8 +68,10 @@
                 <h1 id="tooltip" class="ms-2" data-bs-toggle="tooltip"
                     title="You can also download models LLM from https://ollama.com/library  🤩😄">Models</h1>
                 Sort By
-                <button id="popular_model_list">popular</button>
-                <button id="newer_model_list">Newer</button>
+                <button id="popular_model_list">popular
+                </button>
+                <button id="newer_model_list">Newer
+                </button>
 
             </div>
             <hr>
@@ -185,19 +187,23 @@
         popular_model_list.onclick = () => {
             //    displayDownloadMessage("Updating...");
             executeCommand(`python scripts/popular.py`);
-            location.reload();
-
+            setTimeout(() => {
+                location.reload();
+            }, 5000);
         };
 
         newer_model_list.onclick = () => {
             //    displayDownloadMessage("Updating...");
             executeCommand(`python scripts/updatemodels.py`);
-            location.reload();
+            setTimeout(() => {
+                location.reload();
+            }, 5000);
         };
     </script>
 
 
     <script>
+        // hober for model 
         // Initialize Bootstrap tooltip
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
