proper short by

--- a/model.html
+++ b/model.html
@@ -67,7 +67,8 @@
             <div style="display: flex; justify-content: space-between; align-items: center;">
                 <h1 id="tooltip" class="ms-2" data-bs-toggle="tooltip"
                     title="You can also download models LLM from https://ollama.com/library  🤩😄">Models</h1>
-                Sort By
+
+                <p style="padding-left: 40%;">Sort By</p>
                 <button id="popular_model_list">popular
                 </button>
                 <button id="newer_model_list">Newer
