--- a/model.html
+++ b/model.html
@@ -72,18 +72,19 @@
 
 
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" id="sortByDropdown" data-bs-toggle="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle"  id="sortByDropdown"
+                        data-bs-toggle="dropdown">
                         Sort By
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="sortByDropdown">
                         <li>
-                            <button class="dropdown-item" id="sortByOption1" id="popular_model_list">popular
-                            </button>
+                        <button class="dropdown-item"  id="popular_model_list">popular
+                        </button>
                         </li>
                         <br>
                         <li>
-                            <button class="dropdown-item" id="sortByOption1" id="newer_model_list">Newer
-                            </button>
+                        <button class="dropdown-item" id="newer_model_list">Newer
+                        </button>
                         </li>
                     </ul>
                 </div>
