--- a/setting.html
+++ b/setting.html
@@ -65,8 +65,7 @@
 
 
                 <!-- ------------------- -->
-
-                <div class="container">
+                <div style="background-color: red;" class="container">
                     <h5>Choose Default model:</h5>
 
                     <div class="row pt-3">
@@ -75,7 +74,8 @@
                                 <div class="d-flex align-items-center mb-2">
                                     <label for="model-select" class="form-label me-2"
                                         style="font-size: smaller;">Model:</label>
-                                    <select class="form-select" id="model-select" style="width: auto;"></select>
+                                    <select class="form-select" id="model-select" style="width: auto;">
+                                    </select>
                                 </div>
                                 <button id="set-default-button" class="btn btn-secondary mt-2">Set as Default</button>
                             </div>
@@ -90,6 +90,10 @@
                         </div>
                     </div>
                 </div>
+
+
+
+               
 
                 <!-- -------------------- -->
 
