--- a/model.html
+++ b/model.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Modals</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="resources/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="resources/bootstrap.bundle.min.js"
@@ -49,7 +49,7 @@
                 <div class="col-md-8 col-12">
                     <button class="openbtn" onclick="openNav()">☰</button>
 
-                    <a href="./index.html"> <img src="favicon.ico" style="width: 10%;" alt="ollama">
+                    <a href="./index.html"> <img src="resources/favicon.ico" style="width: 10%;" alt="ollama">
                     </a>
                 </div>
             </div>
