--- a/setting.html
+++ b/setting.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Setting</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="resources/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="resources/bootstrap.bundle.min.js"
@@ -15,7 +15,7 @@
     <script src="resources/purify.min.js" integrity="sha256-QigBQMy2be3IqJD2ezKJUJ5gycSmyYlRHj2VGBuITpU="
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="chat.css">
-
+  
     <style>
         #input-area {
             display: none;
@@ -51,7 +51,7 @@
                 <div class="col-md-8 col-12">
                     <button class="openbtn" onclick="openNav()">☰</button>
 
-                    <a href="./index.html"> <img src="favicon.ico" style="width: 10%;" alt="ollama">
+                    <a href="./index.html"> <img src="resources/favicon.ico" style="width: 10%;" alt="ollama">
                     </a>
                 </div>
             </div>
@@ -63,39 +63,8 @@
 
 
 
-
-                <!-- ------------------- -->
-                <div style="background-color: red;" class="container">
-                    <h5>Choose Default model:</h5>
-
-                    <div class="row pt-3">
-                        <div id="model-controls" class="col-md-4 col-12 text-md-end text-start mb-3">
-                            <div class="d-flex flex-column align-items-md-end align-items-start">
-                                <div class="d-flex align-items-center mb-2">
-                                    <label for="model-select" class="form-label me-2"
-                                        style="font-size: smaller;">Model:</label>
-                                    <select class="form-select" id="model-select" style="width: auto;">
-                                    </select>
-                                </div>
-                                <button id="set-default-button" class="btn btn-secondary mt-2">Set as Default</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="container p-2 card" id="input-area">
-                        <div class="input-group">
-                            <textarea class="form-control" id="user-input"
-                                placeholder="Type your question here..."></textarea>
-                            <button id="send-button" class="btn btn-primary">Send</button>
-                        </div>
-                    </div>
-                </div>
-
-
-
                
 
-                <!-- -------------------- -->
 
 
 
@@ -171,5 +140,9 @@
 </body>
 <script src="api.js"></script>
 <script src="chat.js"></script>
+
+<script>
+    window.onload = loadBackgroundColor;
+</script>
 
 </html>
